added print in python

--- a/app/templates/shellcodeInfo.html
+++ b/app/templates/shellcodeInfo.html
@@ -69,6 +69,7 @@ $ scgen -a {{ mode }} {{ scodename }} -?
             <option>string</option>
             <option>c</option>
             <option>hex</option>
+            <option>python</option>
         </select>
 </div>
 <div class="pure-control-group">
